# english_exam_web

./: README.md  docker-compose.yml
api/: main.py  package-lock.json  pyproject.toml
api/models/: __init__.py  categories.py  documentations.py  histories.py  parts.py  questions.py  reviews.py  tests.py  users.py
api/routers/: categories.py  documentations.py  histories.py  login.py  parts.py  questions.py  reviews.py  tests.py  users.py
auth0/: .gitignore  README.md  dev-config.json  package-lock.json  package.json  tenant.yaml
auth0/pages/: login.html  password_reset.html
auth0/rules/: Add user email to access token.js  Deny Social Connection if there is no corresponding email in database.js  Deny third party applications from requesting first party only scopes.js
web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.js
web/src/: App.vue  index.html  main.js
web/src/admin/: App.vue  index.html  main.js
web/src/admin/components/: About.vue
web/src/admin/router/: index.js
web/src/assets/: backup.backup  english(1).sql  english.sql
web/src/components/: AppBar.vue  Home.vue  ListTests.vue
web/src/components/admin/: AppBar.vue  CategoryForm.vue  DocumentationForm.vue  ManageCategory.vue  ManageDetailDocumentation.vue  ManageDetailTest.vue  ManageDetailUser.vue  ManageDocumentation.vue  ManageTest.vue  ManageUser.vue  TestForm.vue  UserForm.vue
web/src/components/common/: AppBar.vue  ChangePassword.vue  DetailDocumentation.vue  (+12 more)
web/src/plugins/: url.js
web/src/router/: index.js
web/src/user/: index.html  main.js
(+13 files in other folders)
